--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,7 @@ set $mod Mod1
 
 exec --no-startup-id picom
 exec --no-startup-id feh --bg-scale ~/Pictures/chasing-sunsets-rw.jpg
-exec --no-startup-id xrdb -merge ~/.Xresources
+exec --no-startup-id ~/remaps.sh
 exec_always --no-startup-id setxkbmap -option ctrl:nocaps
 
 # kill any hanging polybar processes
