--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,13 +13,18 @@ for_window [class="^.*"] border pixel 1
 
 set $mod Mod1
 
+exec --no-startup-id nvidia-settings --load-config-only
+exec --no-startup-id /usr/lib/gsd-xsettings
+
 exec --no-startup-id picom -b
-exec --no-startup-id feh --bg-scale ~/Pictures/Wallpapers/chasing-sunsets-rw.jpg
+exec --no-startup-id feh --bg-scale ~/Pictures/Wallpapers/violet-city.jpg
 exec --no-startup-id ~/remaps.sh
 
 # kill any hanging polybar processes
 exec_always killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
+
+bindsym $mod+shift+x exec betterlockscreen -l
 
 bindsym Print exec maim "/home/$USER/Pictures/Screenshots/$(date).jpg"
 bindsym $mod+Print exec maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date).jpg"
