--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -97,7 +97,7 @@ inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+# frame-opacity = 0.7;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -123,7 +123,11 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
+opacity-rule = [
+  "100:name *= 'Firefox' && focused",
+  "100:name *= 'Chrome' && focused",
+  "100:name *= 'Toolbox'"
+];
 
 
 #################################
