--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -126,7 +126,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [
   "100:name *= 'Firefox' && focused",
   "100:name *= 'Chrome' && focused",
-  "100:name *= 'Toolbox'"
+  "100:name *= 'Toolbox'",
+  "100:class_g = 'Evince' && focused"
 ];
 
 
