--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Adwaita
+gtk-theme-name=Adwaita:dark
 gtk-icon-theme-name=Adwaita
 gtk-font-name=DejaVu Sans 11
-gtk-application-prefer-dark-theme=true
+gtk-application-prefer-dark-theme=1
