--- a/.config/i3/config
+++ b/.config/i3/config
@@ -26,14 +26,14 @@ exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 
 bindsym $mod+shift+x exec betterlockscreen -l
 
-bindsym Print exec maim -o "/home/$USER/Pictures/Screenshots/$(date).jpg"
-bindsym $mod+Print exec maim -o --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date).jpg"
-bindsym Shift+Print exec maim -o --select "/home/$USER/Pictures/$(date).jpg"
+bindsym Ctrl+Print exec maim -o --select "/home/$USER/Pictures/$(date).jpg"
+bindsym Ctrl+Shift+Print exec maim -o --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date).jpg"
+bindsym Ctrl+$mod+Print exec maim -o "/home/$USER/Pictures/Screenshots/$(date).jpg"
 
 ## Clipboard Screenshots
-bindsym Ctrl+Print exec maim -o | xclip -selection clipboard -t image/png
-bindsym Ctrl+$mod+Print exec maim -o --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
-bindsym Ctrl+Shift+Print exec maim -o --select | xclip -selection clipboard -t image/png
+bindsym Print exec maim -o --select | xclip -selection clipboard -t image/png
+bindsym Shift+Print exec maim -o --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym $mod+Print exec maim -o | xclip -selection clipboard -t image/png
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
