--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,10 +1,5 @@
 # Set true color
-set -g default-terminal "tmux-256color"
-
-set-option -gas terminal-overrides "*:Tc" # true color support
-set-option -gas terminal-overrides "*:RGB" # true color support
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g mouse on
 
@@ -13,9 +8,9 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
-# Shift Alt vim keys to switch windows
-bind -n M-H previous-window
-bind -n M-L next-window
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -26,8 +21,29 @@ set-option -g renumber-windows on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+set -g @catppuccin_flavour 'macchiato'
+
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # Set vi-mode
 set-window-option -g mode-keys vi
@@ -38,5 +54,6 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 run '~/.tmux/plugins/tpm/tpm'
