--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -70,7 +70,8 @@ opacity-rule = [
   "100:name *= 'Firefox' && focused",
   "100:name *= 'Chrome' && focused",
   "100:name *= 'Toolbox'",
-  "100:class_g = 'Evince' && focused"
+  "100:class_g = 'Evince' && focused",
+  "0:_NET_WM_STATE@[*]:32a = '_NET_WM_STATE_HIDDEN'",
 ];
 
 
